@@ -2075,3 +2075,5 @@ version 9.42 (2022-09-01)
 
 version 9.43 (2022-09-02)
     * Adds nonce support to DPoPUtils and DPoPProofFactory (iss #379).
+    * Adds DPoP-Nonce header support to HTTPResponse (iss #379).
+
